feat: add url shorten function

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,4 @@
-<h1>This is an url-shortener app!</h1>
+<form action="/result" method="POST">
+  <input type="text" placeholder="Input URL here" name="url">
+  <button type="submit">Shorten</button>
+</form>
