--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
 <form action="/result" method="POST">
-  <input type="text" placeholder="Input URL here" name="url">
+  <input type="text" placeholder="Input URL here" name="url" required>
   <button type="submit">Shorten</button>
 </form>
