style: modify index page ui

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,13 @@
+<h2 style="color: whitesmoke; width:max-content">貼上、縮短，就這麼簡單！</h2>
+<img src="https://images.vexels.com/media/users/3/136294/isolated/preview/4172fc9833fe18b5f8669b148713a189-link-icon-by-vexels.png" width="30%">
+
 <form action="/result" method="POST">
-  <input type="text" placeholder="Input URL here" name="url" required>
-  <button type="submit">Shorten</button>
+  <div class="row">
+    <div class="col-12 align-self-center">
+      <input type="text" placeholder="Input URL here" name="url" style="width: 100%;" required>
+    </div>
+    <div class="col-12 my-2 align-self-center">
+      <button class="btn btn-secondary" type="submit" style="width: 100%;"> Shorten</button>
+    </div>
+  </div>
 </form>
