--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,19 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>URL-SHORTENER</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css"
+     crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/377e98a247.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
-  <nav class="navbar navbar-light bg-light">
+<body class="bg-primary">
+  <nav class="navbar navbar-dark bg-secondary">
     <span class="navbar-brand mb-0 h1">URL-SHORTENER</span>
   </nav>
 
-  <div class="container">
-    <h2>URL Shortener</h2>
-    <i class="fas fa-link"></i>
+  <div class="container mt-3 d-flex flex-column align-items-center justify-content-center">
     {{{body}}}
   </div>
   
