refactor: modify express routes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
 
 <body class="bg-primary">
   <nav class="navbar navbar-dark bg-secondary">
-    <span class="navbar-brand mb-0 h1">URL-SHORTENER</span>
+    <a class="navbar-brand" href="/">URL-SHORTENER</a>
   </nav>
 
   <div class="container mt-3 d-flex flex-column align-items-center justify-content-center">
